k8s/prod/used-book.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: used-book
  namespace: usedbook-prod
  labels:
    app: used-book
    project: used-book
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: used-book
      project: used-book
      environment: prod
  template:
    metadata:
      labels:
        app: used-book
        project: used-book
        environment: prod
    spec:
      containers:
      - name: used-book
        image: used-book:prod
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
