k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: used-book
  namespace: usedbook-prod
  labels:
    project: used-book
    environment: prod
spec:
  ingressClassName: nginx
  rules:
  - host: "used-book.abyssworks.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: used-book
            port:
              number: 80
